// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot testing Renders a header without a siteTitle defined 1`] = `
<DocumentFragment>
  .emotion-3 {
  background: rebeccapurple;
  margin-bottom: 1.45rem;
}

.emotion-2 {
  margin: 0 auto;
  max-width: 960px;
  padding: 1.45rem 1.1rem;
}

.emotion-1 {
  margin: 0;
}

.emotion-0 {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<header
    class="emotion-3"
  >
    <div
      class="emotion-2"
    >
      <h1
        class="emotion-1"
      >
        <a
          class="emotion-0"
          href="/"
        />
      </h1>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Snapshot testing Should render a header without error 1`] = `
<DocumentFragment>
  .emotion-3 {
  background: rebeccapurple;
  margin-bottom: 1.45rem;
}

.emotion-2 {
  margin: 0 auto;
  max-width: 960px;
  padding: 1.45rem 1.1rem;
}

.emotion-1 {
  margin: 0;
}

.emotion-0 {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<header
    class="header emotion-3"
    data-testid="header"
  >
    <div
      class="emotion-2"
    >
      <h1
        class="emotion-1"
      >
        <a
          class="emotion-0"
          href="/"
        >
          test-title
        </a>
      </h1>
    </div>
  </header>
</DocumentFragment>
`;
